--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@
 #player_health {
    width: 35%;
    height: 30px;
-   background-color: red;
+   background-color: rgb(175, 1, 1);
    margin-left: 5px;
    border: 2px solid brown;
 }
@@ -37,21 +37,18 @@
 #boss_health {
    width: 45%;
    height: 30px;
-   background-color: red;
+   background-color: rgb(175, 1, 1);
    margin-right: 40px;
    border: 2px solid brown;
 }
 
 #actions_container {
-   /* width: 30%;
-   height: 20vh; */
-   /* background-color: white;
-   border: 3px solid black; */
+
    border-radius: 10px;
    position: absolute;
-   bottom: 0;
-   margin-bottom: 5%;
-   margin-left: 1.5%;
+   bottom: 16%;
+   /* margin-bottom: 5%; */
+   margin-left: 8%;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -66,4 +63,11 @@
 
 .action_button:active {
    background-color: rgb(182, 182, 182);
+}
+
+#avatar {
+   position: absolute;
+   bottom: 15%;
+   /* margin-bottom: 5%; */
+   margin-left: 6%; 
 }
