--- a/index.css
+++ b/index.css
@@ -26,20 +26,32 @@
    border-radius: 5px;
 }
 
-#player_health {
+#player_health_container {
    width: 35%;
    height: 30px;
-   background-color: rgb(175, 1, 1);
+   background-color: rgb(105, 105, 105);
    margin-left: 5px;
    border: 2px solid brown;
 }
 
-#boss_health {
+#boss_health_container {
    width: 45%;
    height: 30px;
-   background-color: rgb(175, 1, 1);
+   background-color: rgb(105, 105, 105);
    margin-right: 40px;
    border: 2px solid brown;
+}
+
+#player_health {
+   width: 100%;
+   height: 30px;
+   background-color: rgb(175, 1, 1);
+}
+
+#boss_health {
+   width: 100%;
+   height: 30px;
+   background-color: rgb(175, 1, 1);
 }
 
 #actions_container {
@@ -65,6 +77,11 @@
    background-color: rgb(182, 182, 182);
 }
 
+#enemy {
+   position: absolute;
+   top: 1%;
+   right: 3%;
+}
 #avatar {
    position: absolute;
    bottom: 15%;
